<resources>
    <string name="app_name">On Board</string>
    <string name="button_addPlacemark">Add Game</string>
    <string name="hint_placemarkTitle">Game Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Game Title </string>
    <string name="save_placemark"> Save Game </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select game image</string>
    <string name="change_placemark_image">Change game image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePlacemark">Delete</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_placemark_maps">Map of All Games </string>
    <string name="numberPlayers">Players</string>
    <string name="time">Time</string>
    <string name="OrganizerName">Name</string>
    <string name="play">Players</string>
    <string name="timex">Time</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="password1">Re-enter password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password_forgotten">Password Forgotten</string>
    <string name="cancel">Cancel</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed: Wrong Password or username already exists!"</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
</resources>