<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.wit.placemark.activities.PlacemarkActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-16dp">

            <ImageView
                android:id="@+id/placemarkImage"
                android:layout_width="237dp"
                android:layout_height="154dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.962"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <Button
                android:id="@+id/chooseImage"
                android:layout_width="147dp"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="55dp"
                android:text="@string/button_addImage"
                app:layout_constraintBottom_toTopOf="@+id/placemarkImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/placemarkLocation"
                android:layout_width="151dp"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="57dp"
                android:text="@string/button_location"
                app:layout_constraintBottom_toTopOf="@+id/placemarkImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.819"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAdd"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="331dp"
                android:layout_height="48dp"
                android:text="@string/button_addPlacemark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.55" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/description"
                android:layout_width="377dp"
                android:layout_height="57dp"
                android:hint="@string/hint_placemarkDescription"
                app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.717" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/placemarkTitle"
                android:layout_width="375dp"
                android:layout_height="64dp"
                android:hint="@string/hint_placemarkTitle"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.496" />

            <EditText
                android:id="@+id/NumP"
                android:layout_width="165dp"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="100dp"
                android:ems="10"
                android:hint="@string/numberPlayers"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.109"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TimeID"
                android:layout_width="197dp"
                android:layout_height="49dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="23dp"
                android:hint="@string/time"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/NumP"
                app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Organizer"
                android:layout_width="377dp"
                android:layout_height="54dp"
                android:hint="@string/OrganizerName"
                app:layout_constraintBottom_toTopOf="@+id/btnAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>