<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/change_placemark_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tableLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="298dp"
            android:layout_height="69dp"
            android:layout_marginStart="7dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageIcon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/placemarkTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="10dp"
                    android:textAlignment="viewStart"
                    android:textSize="30sp"
                    tools:text="A Title" />

                <TextView
                    android:id="@+id/play"
                    android:layout_width="52dp"
                    android:layout_height="23dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/play" />

                <TextView
                    android:id="@+id/Nump"
                    android:layout_width="75dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    tools:text="@string/numberPlayers" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textAlignment="viewStart"
                    tools:text="A Description" />

                <TextView
                    android:id="@+id/timex"
                    android:layout_width="54dp"
                    android:layout_height="18dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/timex" />

                <TextView
                    android:id="@+id/TimeID"
                    android:layout_width="74dp"
                    android:layout_height="17dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textAlignment="viewStart"
                    tools:text="@string/time" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>